[package]
name = "axum-sqlite-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.27", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
tokio-util = "0.7"
async-trait = "0.1"
once_cell = "1.17"
jwt = "0.15.0"
jsonwebtoken = "8.3"
hmac = "0.11.0"
sha3 = "0.10"
time = "0.2"
rustls = { version = "0.21" }
uuid = { version = "1.3", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
